WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95452
[sh4] JavaScriptCore JIT does not compile for sh4 arch
https://bugs.webkit.org/show_bug.cgi?id=95452
Summary
[sh4] JavaScriptCore JIT does not compile for sh4 arch
Julien Brianceau
Reported
2012-08-30 06:06:49 PDT
JavaScriptCore JIT does not compile for sh4 arch
Attachments
Missing sh4 jit functions implementation
(4.06 KB, patch)
2012-08-30 06:13 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2012-08-30 06:08:05 PDT
I will post a patch to fix sh4 build soon.
Julien Brianceau
Comment 2
2012-08-30 06:13:28 PDT
Created
attachment 161457
[details]
Missing sh4 jit functions implementation
WebKit Review Bot
Comment 3
2012-08-30 09:03:24 PDT
Comment on
attachment 161457
[details]
Missing sh4 jit functions implementation Clearing flags on attachment: 161457 Committed
r127148
: <
http://trac.webkit.org/changeset/127148
>
WebKit Review Bot
Comment 4
2012-08-30 09:03:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug