[sh4] Add missing implementation for JavaScriptCore JIT https://bugs.webkit.org/show_bug.cgi?id=95452

Patch by Julien BRIANCEAU <jbrianceau@nds.com> on 2012-08-30
Reviewed by Oliver Hunt.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::isCompactPtrAlignedAddressOffset):
(MacroAssemblerSH4):
(JSC::MacroAssemblerSH4::add32):
(JSC::MacroAssemblerSH4::convertibleLoadPtr):
* assembler/SH4Assembler.h:
(JSC::SH4Assembler::labelIgnoringWatchpoints):
(SH4Assembler):
(JSC::SH4Assembler::replaceWithLoad):
(JSC::SH4Assembler::replaceWithAddressComputation):

Canonical link: https://commits.webkit.org/113319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127148 268f45cc-cd09-0410-ab3c-d52691b4dbfc